kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: d2-live
  namespace: hyperion

spec:
  ports:
    - name: web
      port: 8090
      targetPort: web

  selector:
    app: d2-live
